<resources>
    <string name="app_name">WanAndroid</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_bottom">BottomActivity</string>
    <string name="title_home">首页</string>
    <string name="title_knowledge">知识体系</string>
    <string name="title_system">体系</string>
    <string name="title_wx">公众号</string>
    <string name="title_square">广场</string>

    <string name="title_nav">导航</string>
    <string name="title_project">项目</string>

    <string name="rationale_sd">需要你的SD卡权限来保存文件</string>
    <string name="title_activity_login">登录</string>
    <!-- Strings related to login -->
    <string name="prompt_account">account</string>
    <string name="prompt_password">Password </string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>

    <string name="login_success">login success</string>
    <string name="login">LOGIN</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="forgot_your_password">Forgot your password ?</string>
    <string name="go">GO</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="next">NEXT</string>
    <string name="register">注册</string>

    <string name="top_article">置顶</string>


    <!-- Menu Action -->
    <string name="action_search">搜索</string>

    <string name="nav_my_score">我的积分</string>
    <string name="nav_my_collect">我的收藏</string>
    <string name="nav_setting">系统设置</string>
    <string name="nav_about_us">关于我们</string>
    <string name="nav_logout">退出登录</string>
    <string name="nav_night_mode">夜间模式</string>
    <string name="my_share">我的分享</string>
    <string name="nav_todo">TODO</string>

    <!-- HotSearch -->
    <string name="search_tint">发现更多干货</string>
    <string name="hot_search">热门搜索</string>
    <string name="clear_all">清空</string>
    <string name="history_search">搜索历史</string>
    <string name="search_null_tint">快来搜点干货吧</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>


    <string name="cancel">取消</string>
    <string name="done">完成</string>

    <string name="IconPreference">color</string>
    <string name="title_activity_basic">BasicActivity</string>
    <!-- Strings used for fragments for navigation -->

    <string name="article_fresh">新</string>

    <string name="splash_jump">跳过</string>


    <!-- Setting -->
    <string name="setting">设置</string>
    <string name="basic_setting">基本设置</string>
    <string name="switch_photo_mode">无图模式</string>
    <string name="switch_no_photo_mode_summary">开启后在非Wifi环境下不加载图片</string>
    <string name="switch_show_top_summary">开启后将不会显示首页置顶文章</string>
    <string name="switch_show_top_title">是否显示首页置顶文章</string>
    <string name="switch_night_mode">夜间模式</string>
    <string name="switch_night_mode_summary">切换夜间皮肤</string>
    <string name="clear_cache">清除缓存</string>
    <string name="clear_cache_successfully">清理成功</string>
    <string name="other_setting">其他设置</string>
    <string name="about_settings">关于</string>
    <string name="choose_theme_color">主题颜色</string>
    <string name="choose_theme_color_summary">自定义主题颜色</string>
    <string name="auto_night_mode">自动切换夜间模式</string>
    <string name="auto_night_mode_summary">设置切换的时间</string>
    <string name="nav_bar_coloration">导航栏着色</string>
    <string name="nav_bar_coloration_summary">导航栏颜色跟随主题颜色</string>
    <string name="scan_share_tip">好用的话推荐给你的小伙伴吧</string>
    <string name="scan_code_tip">好用的话推荐给你的小伙伴吧\n（ 建议使用浏览器扫描二维码下载 ^_^ ）</string>
    <string name="back">返回</string>


    <!-- AboutUs -->
    <string name="about_us">关于我们</string>
    <string name="changelog">更新日志</string>
    <string name="changelog_url">https://github.com/ThirdPrince/WanAndroid/releases</string>
    <string name="about_developers_label">主要开发者</string>
    <string name="about_developers">https://github.com/ThirdPrince/WanAndroid</string>
    <string name="source_code">源代码</string>
    <string name="source_code_url">https://github.com/ThirdPrince/WanAndroid</string>
    <string name="about_libraries_label">开源许可</string>
    <string name="about_libraries_summary">查看开源许可信息</string>
    <string name="copyright">版权声明</string>
    <string name="copyright_summary">仅作个人及非商业用途</string>
    <string name="version">版本</string>
    <string name="current_version">当前版本&#160;</string>
    <string name="official_website">官方网站</string>
    <string name="official_website_url">https://www.wanandroid.com</string>
    <string name="scan_code_download">扫码下载</string>

</resources>
