<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home_48px"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_knowledge"
        android:icon="@drawable/apps_48px"
        android:title="@string/title_knowledge" />

    <item
        android:id="@+id/nav_wx_article"
        android:icon="@drawable/wechat_48px"
        android:title="@string/title_wx" />

    <item
        android:id="@+id/navigation_nav"
        android:icon="@drawable/nav_48px"
        android:title="@string/title_square" />

    <item
        android:id="@+id/navigation_project"
        android:icon="@drawable/project_48px"
        android:title="@string/title_project" />

</menu>
