<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/viewBackground"
    android:orientation="vertical">

    <include layout="@layout/fragment_toolbar" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/search_result_rcy"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray_bg"
        android:visibility="gone"
        ></androidx.recyclerview.widget.RecyclerView>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/search_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        android:visibility="visible"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/dp_16">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp_8"
                android:text="@string/hot_search"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/sp_16" />

            <com.zhy.view.flowlayout.TagFlowLayout
                android:id="@+id/hot_search_flow_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:max_select="0" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_24">

                <TextView
                    android:id="@+id/search_history_clear_all_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:drawablePadding="@dimen/dp_6"
                    android:text="@string/clear_all"
                    android:textColor="@color/Grey400" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_toStartOf="@+id/search_history_clear_all_tv"
                    android:layout_toLeftOf="@+id/search_history_clear_all_tv"
                    android:text="@string/history_search"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/sp_16" />
            </RelativeLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/search_history_rcy"
                android:layout_width="match_parent"
                android:layout_height="match_parent"></androidx.recyclerview.widget.RecyclerView>


        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>